# MetaAI-Hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  requirements.txt  train.py  trained_invoice_classifier.pt  trained_itc_reconciliation.pt
files/: agent.md  context.md  memory.md  prd.md
gst-sahayak/: pyproject.toml  requirements.txt  train.py
gst-sahayak/server/: gst_environment.py
scripts/: validate-submission.sh
server/: app.py  data_generator.py  graders.py  gst_environment.py
static/: index.html
tests/: test_suite.py
