[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gst-sahayak"
version = "1.0.0"
description = "RL environment for Indian GST compliance automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "openai",
    "pydantic>=2.0",
    "faker",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
